--- a/Curso-em-Video/HTML5-CSS3/exercicios/ex002/index.html
+++ b/Curso-em-Video/HTML5-CSS3/exercicios/ex002/index.html
@@ -16,8 +16,9 @@
     <p>
         Se precisar quebrar o texto
         em algum lugar especifico <br>
-        como esse, você pode usar a tag &lt;br&gt;. <!-- LESS THAN / GREATER THAN (MENOR QUE E MAIOR QUE)-->
+        como esse, você pode usar a tag &lt;br&gt;. <!--LESS THAN / GREATER THAN (MENOR QUE E MAIOR QUE)-->
     </p>
+
     <p>
         Vamos adicionar alguns símbolos especiais:
         &reg;
@@ -28,13 +29,12 @@
         &yen;
         &cent;
         &Delta;
-        &uparrow;
         &uarr;
     </p>
-    <p>
-        Vamos adicionar alguns emogi:
-        &#x1F44D
-        &#x1F60E
+
+    <p>Vamos adicionar alguns emojis:
+        &#x1F596;
+        &#x1F913;
     </p>
 </body>
 </html>
