--- a/Curso-em-Video/HTML5-CSS3/exercicios/ex009/index.html
+++ b/Curso-em-Video/HTML5-CSS3/exercicios/ex009/index.html
@@ -25,6 +25,57 @@
         <li>Arroz</li>
     </ul>
 
+    <h2>Minhas Linguagens favoritas</h2>
+    <ol>
+        <li>Antigas</li>
+        <ol type="I">
+            <li>Java</li>
+            <li>C++</li>
+        </ol>
+        <li>Novas</li>
+        <ol type="I" start="3">
+            <li>Vanilha JS</li>
+            <li>React</li>
+            <li>Node</li>
+        </ol>
+    </ol>
+
+    <h2>Jogos Favoritos</h2>
+    <ol>
+        <li>Playstation</li>
+        <ul type="square">
+            <li>PES</li>
+            <li>GTA</li>
+            <li>Formula 1</li>
+        </ul>
+
+        <li>PC</li>
+        <ul type="square">
+            <li>Crossfire</li>
+            <li>CS:GO</li>
+            <li>DDTANK</li>
+            <li>Habbo</li>
+        </ul>
+
+        <li>Mobile</li>
+        <ul type="square">
+            <li>FIFA</li>
+            <li>PUBG</li>
+            <li>Sinuca</li>
+            <li>Perguntados</li>
+        </ul>
+    </ol>
+
     <h2>Listas de Definição</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação para a criação de conteúdo de um site.</dd>
+
+        <dt>CSS</dt>
+        <dd>Linguagem de marcação para a criação do desing de um site.</dd>
+
+        <dt>JavaScript</dt>
+        <dd>Linguagem de progamação para a criação de interatividade de um site.</dd>
+    </dl>
 </body>
 </html>
